[gd_scene load_steps=9 format=3 uid="uid://d1b02trcyeing"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_5h3mg"]
[ext_resource type="PackedScene" uid="uid://bcne1d3p0amrk" path="res://scenes/background.tscn" id="2_kpss6"]
[ext_resource type="PackedScene" uid="uid://dvqe5yrmnj22t" path="res://scenes/player.tscn" id="3_wedu7"]
[ext_resource type="PackedScene" uid="uid://c1yfdfrmpulxv" path="res://pause.tscn" id="5_iknmg"]
[ext_resource type="PackedScene" uid="uid://fngnr2xexaol" path="res://scenes/respawn_menu.tscn" id="6_uhd64"]
[ext_resource type="PackedScene" uid="uid://ba5wkbyryd56j" path="res://scenes/tutorial_popup.tscn" id="7_3n8jm"]
[ext_resource type="AudioStream" uid="uid://bsidpirkadgy" path="res://assets/music/in-game-hustle-cyberpunk-music-230632.mp3" id="7_qxudk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jgt6t"]
size = Vector2(102, 1058)

[node name="Game" type="Node"]
script = ExtResource("1_5h3mg")
metadata/_edit_horizontal_guides_ = [1080.0]

[node name="Player" parent="." instance=ExtResource("3_wedu7")]
position = Vector2(371, 713)

[node name="Spawner" type="Marker2D" parent="Player"]
position = Vector2(2588, 200)

[node name="Background Music" type="AudioStreamPlayer2D" parent="Player"]
process_mode = 3
position = Vector2(-371, -761)
stream = ExtResource("7_qxudk")
volume_db = -16.933
autoplay = true

[node name="Parallax2D" parent="." instance=ExtResource("2_kpss6")]

[node name="Respawn" type="Timer" parent="."]

[node name="Fast_Respawn" type="Timer" parent="."]

[node name="Hard_Respawn" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Pause" parent="CanvasLayer" instance=ExtResource("5_iknmg")]

[node name="Respawn Menu" parent="CanvasLayer" instance=ExtResource("6_uhd64")]
visible = false
offset_left = 3.0
offset_top = -4.0
offset_right = 3.0
offset_bottom = -4.0

[node name="Tutorial Popup" parent="CanvasLayer" instance=ExtResource("7_3n8jm")]

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="Boundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary"]
position = Vector2(-51, 526)
shape = SubResource("RectangleShape2D_jgt6t")

[connection signal="timeout" from="Respawn" to="." method="_on_respawn_timeout"]
[connection signal="timeout" from="Fast_Respawn" to="." method="_on_fast_respawn_timeout"]
[connection signal="timeout" from="Hard_Respawn" to="." method="_on_hard_respawn_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
